# Lumin-Culler

./: .gitignore  README.md  capacitor.config.ts  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: deploy.yml
android/app/: build.gradle
electron/: main.cjs  preload.cjs
mobile-rn/: .env.example  App.tsx  README.md  app.json  package-lock.json  package.json
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src/core/: aiExplanationGenerator.test.ts  aiExplanationGenerator.ts  backupService.ts  bkTree.test.ts  bkTree.ts  db.ts  exifParser.test.ts  exifParser.ts  exportPhotos.test.ts  exportPhotos.ts  faceClustering.test.ts  faceClustering.ts  filePicker.test.ts  filePicker.ts  groupSelection.test.ts  groupSelection.ts  hashComparePool.ts  importPipeline.test.ts  importPipeline.ts  iptcParser.test.ts  iptcParser.ts  performanceSettings.ts  personProfileTransfer.test.ts  personProfileTransfer.ts  previewUrlCache.test.ts  previewUrlCache.ts  rawDecoder.test.ts  rawDecoder.ts  renameTemplate.test.ts  renameTemplate.ts  stats.test.ts  stats.ts  workerPool.ts
src/i18n/: en.ts  index.test.ts  index.ts  ro.ts
src/state/: batchOps.test.ts  batchOps.ts  cullingPresets.test.ts  cullingPresets.ts  genre.ts  gridDensity.ts  gridSort.test.ts  gridSort.ts  history.test.ts  history.ts  projectMetadata.test.ts  projectMetadata.ts  projectName.ts  store.ts  theme.test.ts  theme.ts  usage.test.ts  usage.ts
src/ui/: AnimatedNumber.tsx  BatchOpsPanel.tsx  ColorLabelFilter.tsx  CommandPalette.tsx  (+27 more)
state/: store.ts
(+13 files in other folders)
